--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -4,6 +4,8 @@
 		<title> Your title here</title>
 	</head>
 	<body>
-		<h1>Hello world!</h1>
+		<h1>Music</h1>
+		<h2>The direct route to the soul.</h2>
+		<p>The eyes are a commonly accepted visual route to the soul, but what of an auditory route?</p>
 	</body>
 </html>
