Add strong text.

--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -7,5 +7,6 @@
 		<h1>Music</h1>
 		<h2>The direct route to the soul.</h2>
 		<p>The eyes are a commonly accepted visual route to the soul, but what of an auditory route?</p>
+		<strong>Music's waves are the auditory route!!</strong>
 	</body>
 </html>
