--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -6,7 +6,7 @@
 	<body>
 		<h1>Music</h1>
 		<h2>The direct route to the soul.</h2>
-		<p><em>The eyes are a commonly accepted visual route to the soul, but what of an auditory route?</em></p>
-		<strong>Music's waves are the auditory route!!</strong>
+		<p>The eyes are a commonly accepted visual route to the soul, but what of an auditory route?</p>
+		<strong><em>Music's waves are the auditory route!!</em></strong>
 	</body>
 </html>
