Add a list and unordered list.

--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -8,5 +8,14 @@
 		<h2>The direct route to the soul.</h2>
 		<p>The eyes are a commonly accepted visual route to the soul, but what of an auditory route?</p>
 		<strong><em>Music's waves are the auditory route!!</em></strong>
+		<ul>
+			<li>Voice</li>
+			<li>Instruments</li>
+		</ul>
+		<ol>
+			<li>Thought</li>
+			<li>Consciousness</li>
+			<li>Sublimation</li>
+		</ol>
 	</body>
 </html>
