Add text introducting lists.

--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -8,14 +8,18 @@
 		<h2>The direct route to the soul.</h2>
 		<p>The eyes are a commonly accepted visual route to the soul, but what of an auditory route?</p>
 		<strong><em>Music's waves are the auditory route!!</em></strong>
-		<ul>
-			<li>Voice</li>
-			<li>Instruments</li>
-		</ul>
-		<ol>
-			<li>Thought</li>
-			<li>Consciousness</li>
-			<li>Sublimation</li>
-		</ol>
+		<p>The modes through which music is created are:
+			<ul>
+				<li>Voice.</li>
+				<li>Instruments.</li>
+			</ul>
+		</p>
+		<p>The process of music arising in one's mind and of being created is as follows:
+			<ol>
+				<li>Thought (conception).</li>
+				<li>Thought becoming conscious.</li>
+				<li>Sublimation.</li>
+			</ol>
+		</p>
 	</body>
 </html>
