Add hyperlink to Song Foundry.

--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -22,4 +22,5 @@
 			</ol>
 		</p>
 	</body>
+	<a href="http://thesongfoundry.com/music-is-the-most-direct-route-to-the-soul/">Explore this concept further.</a>
 </html>
