--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title> Your title here</title>
+		<title>Art of Musical Sublimation</title>
 	</head>
 	<body>
 		<h1>Music</h1>
