--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -8,19 +8,17 @@
 		<h2>The direct route to the soul.</h2>
 		<p>The eyes are a commonly accepted visual route to the soul, but what of an auditory route?</p>
 		<strong><em>Music's waves are the auditory route!!</em></strong>
-		<p>The modes through which music is created are:
+		<p>The modes through which music is created are:</p>
 			<ul>
 				<li>Voice.</li>
 				<li>Instruments.</li>
 			</ul>
-		</p>
-		<p>The process of music arising in one's mind and of being created is as follows:
+		<p>The process of music arising in one's mind and of being created is as follows:</p>
 			<ol>
 				<li>Thought (conception).</li>
 				<li>Thought becoming conscious.</li>
 				<li>Sublimation.</li>
 			</ol>
-		</p>
+		<a href="http://thesongfoundry.com/music-is-the-most-direct-route-to-the-soul/">Explore this concept further.</a>
 	</body>
-	<a href="http://thesongfoundry.com/music-is-the-most-direct-route-to-the-soul/">Explore this concept further.</a>
 </html>
