Add second table including colspan and rowspan.

--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -21,5 +21,20 @@
 			<td>Painter</td>
 		</tr>
 	</table>
+	<table border=1>
+		<tr>
+			<th colspan="2">Header</th>
+			<th>Header</th>
+		</tr>
+		<tr>
+			<td rowspan="2">Text</td>
+			<td>Text</td>
+			<td>Text</td>
+		</tr>
+		<tr>
+			<td>Text</td>
+			<td>Text</td>
+		</tr>
+	</table>
 </body>
 </html>
