--- a/html/moon_bootz/index.html
+++ b/html/moon_bootz/index.html
@@ -7,7 +7,7 @@
 	<nav>
 		<a href="contact.html">Contact Us<a>
 		<a href="product_details.html">Moon Bootz Product Details<a>
-		<a href="moon_bootz/legal/waiver.html">Legal Waiver<a>
+		<a href="legal/waiver.html">Legal Waiver<a>
 	</nav>
 </body>
 </html>
