Add link back to home page.

--- a/html/moon_bootz/contact.html
+++ b/html/moon_bootz/contact.html
@@ -4,6 +4,9 @@
 	<title>Contact Us</title>
 </head>
 <body>
+	<header>
+	<a href="index.html">Back to Home<a>
+	</header>
 	<p>Send us an email at MBz@daboots.com
 	or give us a call at 123-456-7890!!
 	</p>
