--- a/css/css-demo/index.html
+++ b/css/css-demo/index.html
@@ -4,7 +4,9 @@
   <title>Resume</title>
   <!-- We're using Google Fonts, which you can also do on your sites, but you don't need to know how for any assessments in this unit. -->
   <link href='https://fonts.googleapis.com/css?family=Dancing+Script' rel='stylesheet' type='text/css'>
-  
+  <link rel="stylesheet" href="styles/elegant-styles.css" type="text/css">
+  <link rel="stylesheet" href="styles/fixed-contact.css" type="text/css">
+  <ling rel="stylesheet" href="practice.css" type="text/css">
 </head>
 <body>
   <h1 id="resume-title">Resume for Imogen Ary-Perrson</h1>
@@ -13,9 +15,9 @@
     <p>I want to become the kind of employee who contributes to her team, champions projects that will add value for the customer, remains humble and introspective, and can pay rent.</p>
   </section>
   <section id="contact-info">
-    <p>287-187-3726</p>
-    <p>imoganary@gmail.com</p>
-    <p>123 Main Street, Anytown, USA 101010</p>
+    <p id="text1">287-187-3726</p>
+    <p id="text1">imoganary@gmail.com</p>
+    <p id="text1">123 Main Street, Anytown, USA 101010</p>
   </section>
 
   <section id="work-experience">
