Add random-text filled table.

--- a/html/gps/index.html
+++ b/html/gps/index.html
@@ -27,6 +27,22 @@
 			<a href="http://www.billboard.com">For more information on other artists visit Billboard here</a>
 		</nav>
 	</footer>
+	<table border=1>
+		<tr>
+			<th>Yo</th>
+			<th>how's it</th>
+			<th>goin?</th>
+		</tr>
+		<tr>
+			<td>Pretty</td>
+			<td>good,</td>
+			<td>you?</td>
+		</tr>
+		<tr>
+			<td>I'm</td>
+			<td colspan="2">chillllllllllllllllllllllllllllllllin.</td>
+		</tr>
+	</table>
 
 </body>
 </html>
