Add the answers to the four reflection questions at the bottom of my index.html page.

--- a/html/gps/index.html
+++ b/html/gps/index.html
@@ -43,6 +43,10 @@
 			<td colspan="2">chillllllllllllllllllllllllllllllllin.</td>
 		</tr>
 	</table>
+	<p>The purpose of HTML tags are to denote a certain action the computer needs to take to show the user what the person coding intends.</p>
+	<p>The browser uses the "cascading" rule to decide the order when displaying elements on a page.</p>
+	<p>I had no idea what a snippet was before this challenege. I now feel that I can accurately utilize them in the future, which will definitely save me from a lot of unnecessary typing!</p>
+	<p>The table was the most difficult. I just need practice visualizing where the rows and columns show up on the web page.</p>
 
 </body>
 </html>
