--- a/css/positioning/index.html
+++ b/css/positioning/index.html
@@ -5,8 +5,8 @@
 	<link rel="stylesheet" href="positioning.css" type="text/css">
 </head>
 <body>
-	<img src="hat.png" alt="Hat">
-	<img src="octopus.png" alt="Octopus">
-	<img src="glasses.png" alt="Glasses";>
+	<img id="hat" src="hat.png" alt="Hat">
+	<img id="octopus" src="octopus.png" alt="Octopus">
+	<img id="glasses" src="glasses.png" alt="Glasses">
 </body>
 </html>
