--- a/css/gps/gps2-1.html
+++ b/css/gps/gps2-1.html
@@ -140,9 +140,7 @@ We spent [#] hours on this challenge.
           <p>Deletes the specified branch</p>
         </details>
       </article>
-    </section>
-
-    <section class="column-2">
+    </section><section class="column-2">
       <article>
         <h2>REFACTOR FILENAMES</h2>
         <p>Relocate and remove versioned files</p>
