Imported all files from my week 2 assessment file.

--- a/web_dev/client_side_js/index.html
+++ b/web_dev/client_side_js/index.html
@@ -9,7 +9,7 @@
     <h1>Siddhartha Gautama</h1>
     <h4><strong>The original Buddha</strong></h4>
     <img src="BuddhaPic.jpg" alt="The Buddha">
-    <img src="https://s-media-cache-ak0.pinimg.com/236x/2c/48/53/2c4853ac0097347e3e6401d64cc9dc70.jpg" alt="Yin Yang">
+    <img id="yin-yang" src="https://s-media-cache-ak0.pinimg.com/236x/2c/48/53/2c4853ac0097347e3e6401d64cc9dc70.jpg" alt="Yin Yang">
     <img class="third_eye" src="http://scontent.cdninstagram.com/t51.2885-15/s480x480/e35/11356778_933633950029255_1293979086_n.jpg?ig_cache_key=MTA2MDYyNzM5NTYzMDM1OTcwMA%3D%3D.2" alt="Third Eye Wide">
   </header>
   <ol id="OG">
